@@ -1,7 +1,6 @@
 package com.gamehub.backend.business.impl;
 
 import com.gamehub.backend.configuration.security.CustomUserDetails;
-import com.gamehub.backend.domain.User;
 import com.gamehub.backend.persistence.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -10,8 +9,6 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -31,7 +28,7 @@ public class CustomUserDetailsService implements UserDetailsService {
                         user.getPasswordHash(),
                         user.getRoles().stream()
                                 .map(role -> new SimpleGrantedAuthority(role.name()))
-                                .collect(Collectors.toList())
+                                .toList()
                 ))
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with username: " + username));
     }
